--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Contenedor de elementos -->
         <div class="contenedor-items">
             <div class="item">
-                <span class="titulo-item">Converse - Chuck Taylor All Star Classic</span>
+                <span class="titulo-item">Versace Eros Flame</span>
                 <img src="https://static.sweetcare.pt/img/prd/488/v-638200526911957752/versace-011432vg_01.jpg" alt="200px" class="img-item">
                 <br>
                 <span class="precio-item">$150</span>
@@ -27,43 +27,43 @@
                
             </div>
             <div class="item">
-                <span class="titulo-item">Chuck Taylor All Star Platform High Top</span>
+                <span class="titulo-item">Dylan Blue</span>
                 <img src="https://priveperfumeshn.com/cdn/shop/files/Perfume-Versace-Pour-Homme-EDT-M-200-ml_66c568fa-43c6-42f6-a4d2-756def4e11e4.webp?v=1708831338" alt="200px" class="img-item">
                 <span class="precio-item">$200</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Converse - Run Star Hike Lo Platform Sneaker</span>
+                <span class="titulo-item"> Eros  </span>
                 <img src="https://www.versace.com/dw/image/v2/BGWN_PRD/on/demandware.static/-/Sites-ver-master-catalog/default/dw84dd6e49/original/90_R740111-R200MLS_RNUL_20_Eros~Eau~de~Parfum~200~ml-Eros-Versace-online-store_0_2.jpg?sw=550&q=85&strip=true" alt="200px" class="img-item">
                 <span class="precio-item">$325</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Converse - Chuck Taylor All Star Lugged 2.0</span>
+                <span class="titulo-item">Versense</span>
                 <img src="https://priveperfumeshn.com/cdn/shop/files/Perfume-Versace-Versense-EDT-W-100-ml_75de0b3e-cd91-427a-8e75-0178c71897aa.webp?v=1708809973" alt="200px" class="img-item">
                 <span class="precio-item">$230</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Converse All Stars</span>
+                <span class="titulo-item">Suavaje</span>
                 <img src="https://static.sweetcare.pt/img/prd/488/v-638200526915238258/versace-011896vg_01.jpg" alt="200px" class="img-item">
                 <span class="precio-item">$180</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item"> Sweeter cold </span>
+                <span class="titulo-item"> Layton </span>
                 <img src="https://static.sweetcare.pt/img/prd/488/v-638200526908421834/versace-011426vg_03.jpg" width="10px" class="img-item">
                 <span class="precio-item">$200</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Shirt Alls Stars</span>
+                <span class="titulo-item">Pour Femme</span>
                 <img src="https://i.pinimg.com/736x/5f/90/6a/5f906a900beef6e6ed77af08ec45d97a.jpg" alt="200px" class="img-item">
                 <span class="precio-item">$180</span>
                 <button class="boton-item">Agregar al Carrito</button>
             </div>
             <div class="item">
-                <span class="titulo-item">Converse X Cold blue</span>
+                <span class="titulo-item">Crystial Noir</span>
                 <img src="https://m.media-amazon.com/images/I/61xeSu5nITL._AC_UF1000,1000_QL80_.jpg" alt="200px" class="img-item">
                 <span class="precio-item">$220</span>
                 <button class="boton-item">Agregar al Carrito</button>
